# SmartFarm

./: README.md
Android/: MainActivity.java  activity_main.xml
Arduino/main/: main.ino
raspi_app/: CMakeLists.txt  Makefile  camera.cpp  camera.h  function.c  main.c  main.h
